--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,11 @@
             <artifactId>sa-token-spring-boot-starter</artifactId>
             <version>${sa-token-version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.ssssssss</groupId>
+            <artifactId>magic-api-plugin-swagger</artifactId>
+            <version>2.0.0</version>
+        </dependency>
         <!--  引入sa-token  -->
         <dependency>
             <groupId>org.ssssssss</groupId>
@@ -63,6 +67,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
         </dependency>
     </dependencies>
 
