--- a/pom.xml
+++ b/pom.xml
@@ -27,22 +27,18 @@
             <artifactId>sa-token-spring-boot-starter</artifactId>
             <version>${sa-token-version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.ssssssss</groupId>
-            <artifactId>magic-api-plugin-swagger</artifactId>
-            <version>2.0.0</version>
-        </dependency>
-        <!--  引入sa-token  -->
-        <dependency>
-            <groupId>org.ssssssss</groupId>
-            <artifactId>magic-api-plugin-redis</artifactId>
-            <version>2.0.0-beta.3</version>
-        </dependency>
         <!-- Sa-Token 整合 Redis （使用jdk默认序列化方式） -->
         <dependency>
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-dao-redis</artifactId>
             <version>1.29.0</version>
+        </dependency>
+
+        <!--  引入 redis插件 -->
+        <dependency>
+            <groupId>org.ssssssss</groupId>
+            <artifactId>magic-api-plugin-redis</artifactId>
+            <version>2.0.0-beta.3</version>
         </dependency>
 
         <dependency>
@@ -67,6 +63,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <!--  引入swagger UI      -->
+        <dependency>
+            <groupId>org.ssssssss</groupId>
+            <artifactId>magic-api-plugin-swagger</artifactId>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
